[gd_scene load_steps=3 format=3 uid="uid://bjgvm28n1ejt4"]

[ext_resource type="Script" uid="uid://c7pktjvxm0r0b" path="res://Scripts/soldado_basico.gd" id="1_vs64r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6wfbj"]
size = Vector2(49, 49)

[node name="soldado_basico" type="StaticBody2D"]
collision_layer = 0
collision_mask = 0
input_pickable = true
script = ExtResource("1_vs64r")
sprite_unidad_path = "res://Assets/assets_unidades/guerrero.png"

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 50.0
offset_bottom = 50.0
mouse_filter = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(25, 25)
shape = SubResource("RectangleShape2D_6wfbj")

[node name="DetectarEnemigo" type="RayCast2D" parent="."]
position = Vector2(25, 25)
target_position = Vector2(0, -30)
collision_mask = 0

[node name="cd_ataque" type="Timer" parent="."]
one_shot = true

[node name="animacion_recibir_da√±o" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
